Bug462570 - Change Network state and Ready state names in HTMLMediaElement to match spec - r=doublec sr=roc
UltraBlame original commit: 3a33323d7270368c82f5f82b72f7bf76833dc94c

--- a/content/media/video/test/test_constants.html
+++ b/content/media/video/test/test_constants.html
@@ -31,9 +31,9 @@ dom
 /
 interfaces
 /
-HTMLElement
+htmlelement
 /
-HTMLMediaElement
+htmlmediaelement
 /
 const
 -
@@ -193,7 +193,7 @@ is
 (
 HTMLElement
 .
-EMPTY
+NETWORK_EMPTY
 undefined
 )
 ;
@@ -201,7 +201,7 @@ is
 (
 HTMLElement
 .
-LOADING
+NETWORK_IDLE
 undefined
 )
 ;
@@ -209,7 +209,7 @@ is
 (
 HTMLElement
 .
-LOADED_METADATA
+NETWORK_LOADING
 undefined
 )
 ;
@@ -217,7 +217,7 @@ is
 (
 HTMLElement
 .
-LOADED_FIRST_FRAME
+NETWORK_LOADED
 undefined
 )
 ;
@@ -225,7 +225,7 @@ is
 (
 HTMLElement
 .
-LOADED
+HAVE_NOTHING
 undefined
 )
 ;
@@ -233,7 +233,7 @@ is
 (
 HTMLElement
 .
-DATA_UNAVAILABLE
+HAVE_METADATA
 undefined
 )
 ;
@@ -241,7 +241,7 @@ is
 (
 HTMLElement
 .
-CAN_SHOW_CURRENT_FRAME
+HAVE_CURRENT_DATA
 undefined
 )
 ;
@@ -249,7 +249,7 @@ is
 (
 HTMLElement
 .
-CAN_PLAY
+HAVE_FUTURE_DATA
 undefined
 )
 ;
@@ -257,7 +257,7 @@ is
 (
 HTMLElement
 .
-CAN_PLAY_THROUGH
+HAVE_ENOUGH_DATA
 undefined
 )
 ;
@@ -265,7 +265,7 @@ is
 (
 HTMLMediaElement
 .
-EMPTY
+NETWORK_EMPTY
 0
 )
 ;
@@ -273,7 +273,7 @@ is
 (
 HTMLMediaElement
 .
-LOADING
+NETWORK_IDLE
 1
 )
 ;
@@ -281,7 +281,7 @@ is
 (
 HTMLMediaElement
 .
-LOADED_METADATA
+NETWORK_LOADING
 2
 )
 ;
@@ -289,7 +289,7 @@ is
 (
 HTMLMediaElement
 .
-LOADED_FIRST_FRAME
+NETWORK_LOADED
 3
 )
 ;
@@ -297,47 +297,47 @@ is
 (
 HTMLMediaElement
 .
-LOADED
+HAVE_NOTHING
+0
+)
+;
+is
+(
+HTMLMediaElement
+.
+HAVE_METADATA
+1
+)
+;
+is
+(
+HTMLMediaElement
+.
+HAVE_CURRENT_DATA
+2
+)
+;
+is
+(
+HTMLMediaElement
+.
+HAVE_FUTURE_DATA
+3
+)
+;
+is
+(
+HTMLMediaElement
+.
+HAVE_ENOUGH_DATA
 4
 )
 ;
 is
 (
-HTMLMediaElement
-.
-DATA_UNAVAILABLE
-0
-)
-;
-is
-(
-HTMLMediaElement
-.
-CAN_SHOW_CURRENT_FRAME
-1
-)
-;
-is
-(
-HTMLMediaElement
-.
-CAN_PLAY
-2
-)
-;
-is
-(
-HTMLMediaElement
-.
-CAN_PLAY_THROUGH
-3
-)
-;
-is
-(
 HTMLVideoElement
 .
-EMPTY
+NETWORK_EMPTY
 undefined
 )
 ;
@@ -345,7 +345,7 @@ is
 (
 HTMLVideoElement
 .
-LOADING
+NETWORK_IDLE
 undefined
 )
 ;
@@ -353,7 +353,7 @@ is
 (
 HTMLVideoElement
 .
-LOADED_METADATA
+NETWORK_LOADING
 undefined
 )
 ;
@@ -361,7 +361,7 @@ is
 (
 HTMLVideoElement
 .
-LOADED_FIRST_FRAME
+NETWORK_LOADED
 undefined
 )
 ;
@@ -369,7 +369,7 @@ is
 (
 HTMLVideoElement
 .
-LOADED
+HAVE_NOTHING
 undefined
 )
 ;
@@ -377,7 +377,7 @@ is
 (
 HTMLVideoElement
 .
-DATA_UNAVAILABLE
+HAVE_METADATA
 undefined
 )
 ;
@@ -385,7 +385,7 @@ is
 (
 HTMLVideoElement
 .
-CAN_SHOW_CURRENT_FRAME
+HAVE_CURRENT_DATA
 undefined
 )
 ;
@@ -393,7 +393,7 @@ is
 (
 HTMLVideoElement
 .
-CAN_PLAY
+HAVE_FUTURE_DATA
 undefined
 )
 ;
@@ -401,7 +401,7 @@ is
 (
 HTMLVideoElement
 .
-CAN_PLAY_THROUGH
+HAVE_ENOUGH_DATA
 undefined
 )
 ;
@@ -409,7 +409,7 @@ is
 (
 HTMLAudioElement
 .
-EMPTY
+NETWORK_EMPTY
 undefined
 )
 ;
@@ -417,7 +417,7 @@ is
 (
 HTMLAudioElement
 .
-LOADING
+NETWORK_IDLE
 undefined
 )
 ;
@@ -425,7 +425,7 @@ is
 (
 HTMLAudioElement
 .
-LOADED_METADATA
+NETWORK_LOADING
 undefined
 )
 ;
@@ -433,7 +433,7 @@ is
 (
 HTMLAudioElement
 .
-LOADED_FIRST_FRAME
+NETWORK_LOADED
 undefined
 )
 ;
@@ -441,7 +441,7 @@ is
 (
 HTMLAudioElement
 .
-LOADED
+HAVE_NOTHING
 undefined
 )
 ;
@@ -449,7 +449,7 @@ is
 (
 HTMLAudioElement
 .
-DATA_UNAVAILABLE
+HAVE_METADATA
 undefined
 )
 ;
@@ -457,7 +457,7 @@ is
 (
 HTMLAudioElement
 .
-CAN_SHOW_CURRENT_FRAME
+HAVE_CURRENT_DATA
 undefined
 )
 ;
@@ -465,7 +465,7 @@ is
 (
 HTMLAudioElement
 .
-CAN_PLAY
+HAVE_FUTURE_DATA
 undefined
 )
 ;
@@ -473,7 +473,7 @@ is
 (
 HTMLAudioElement
 .
-CAN_PLAY_THROUGH
+HAVE_ENOUGH_DATA
 undefined
 )
 ;
@@ -481,7 +481,7 @@ is
 (
 HTMLSourceElement
 .
-EMPTY
+NETWORK_EMPTY
 undefined
 )
 ;
@@ -489,7 +489,7 @@ is
 (
 HTMLSourceElement
 .
-LOADING
+NETWORK_IDLE
 undefined
 )
 ;
@@ -497,7 +497,7 @@ is
 (
 HTMLSourceElement
 .
-LOADED_METADATA
+NETWORK_LOADING
 undefined
 )
 ;
@@ -505,7 +505,7 @@ is
 (
 HTMLSourceElement
 .
-LOADED_FIRST_FRAME
+NETWORK_LOADED
 undefined
 )
 ;
@@ -513,7 +513,7 @@ is
 (
 HTMLSourceElement
 .
-LOADED
+HAVE_NOTHING
 undefined
 )
 ;
@@ -521,7 +521,7 @@ is
 (
 HTMLSourceElement
 .
-DATA_UNAVAILABLE
+HAVE_METADATA
 undefined
 )
 ;
@@ -529,7 +529,7 @@ is
 (
 HTMLSourceElement
 .
-CAN_SHOW_CURRENT_FRAME
+HAVE_CURRENT_DATA
 undefined
 )
 ;
@@ -537,7 +537,7 @@ is
 (
 HTMLSourceElement
 .
-CAN_PLAY
+HAVE_FUTURE_DATA
 undefined
 )
 ;
@@ -545,7 +545,7 @@ is
 (
 HTMLSourceElement
 .
-CAN_PLAY_THROUGH
+HAVE_ENOUGH_DATA
 undefined
 )
 ;
@@ -555,7 +555,7 @@ document
 .
 body
 .
-EMPTY
+NETWORK_EMPTY
 undefined
 )
 ;
@@ -565,7 +565,7 @@ document
 .
 body
 .
-LOADING
+NETWORK_IDLE
 undefined
 )
 ;
@@ -575,7 +575,7 @@ document
 .
 body
 .
-LOADED_METADATA
+NETWORK_LOADING
 undefined
 )
 ;
@@ -585,7 +585,7 @@ document
 .
 body
 .
-LOADED_FIRST_FRAME
+NETWORK_LOADED
 undefined
 )
 ;
@@ -595,7 +595,7 @@ document
 .
 body
 .
-LOADED
+HAVE_NOTHING
 undefined
 )
 ;
@@ -605,7 +605,7 @@ document
 .
 body
 .
-DATA_UNAVAILABLE
+HAVE_METADATA
 undefined
 )
 ;
@@ -615,7 +615,7 @@ document
 .
 body
 .
-CAN_SHOW_CURRENT_FRAME
+HAVE_CURRENT_DATA
 undefined
 )
 ;
@@ -625,7 +625,7 @@ document
 .
 body
 .
-CAN_PLAY
+HAVE_FUTURE_DATA
 undefined
 )
 ;
@@ -635,7 +635,7 @@ document
 .
 body
 .
-CAN_PLAY_THROUGH
+HAVE_ENOUGH_DATA
 undefined
 )
 ;
@@ -653,7 +653,7 @@ video
 0
 ]
 .
-EMPTY
+NETWORK_EMPTY
 0
 )
 ;
@@ -671,7 +671,7 @@ video
 0
 ]
 .
-LOADING
+NETWORK_IDLE
 1
 )
 ;
@@ -689,7 +689,7 @@ video
 0
 ]
 .
-LOADED_METADATA
+NETWORK_LOADING
 2
 )
 ;
@@ -707,7 +707,7 @@ video
 0
 ]
 .
-LOADED_FIRST_FRAME
+NETWORK_LOADED
 3
 )
 ;
@@ -725,25 +725,7 @@ video
 0
 ]
 .
-LOADED
-4
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-video
-"
-)
-[
-0
-]
-.
-DATA_UNAVAILABLE
+HAVE_NOTHING
 0
 )
 ;
@@ -761,7 +743,7 @@ video
 0
 ]
 .
-CAN_SHOW_CURRENT_FRAME
+HAVE_METADATA
 1
 )
 ;
@@ -779,7 +761,7 @@ video
 0
 ]
 .
-CAN_PLAY
+HAVE_CURRENT_DATA
 2
 )
 ;
@@ -797,7 +779,7 @@ video
 0
 ]
 .
-CAN_PLAY_THROUGH
+HAVE_FUTURE_DATA
 3
 )
 ;
@@ -808,86 +790,14 @@ document
 getElementsByTagName
 (
 "
-audio
+video
 "
 )
 [
 0
 ]
 .
-EMPTY
-0
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-audio
-"
-)
-[
-0
-]
-.
-LOADING
-1
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-audio
-"
-)
-[
-0
-]
-.
-LOADED_METADATA
-2
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-audio
-"
-)
-[
-0
-]
-.
-LOADED_FIRST_FRAME
-3
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-audio
-"
-)
-[
-0
-]
-.
-LOADED
+HAVE_ENOUGH_DATA
 4
 )
 ;
@@ -905,7 +815,7 @@ audio
 0
 ]
 .
-DATA_UNAVAILABLE
+NETWORK_EMPTY
 0
 )
 ;
@@ -923,7 +833,7 @@ audio
 0
 ]
 .
-CAN_SHOW_CURRENT_FRAME
+NETWORK_IDLE
 1
 )
 ;
@@ -941,7 +851,7 @@ audio
 0
 ]
 .
-CAN_PLAY
+NETWORK_LOADING
 2
 )
 ;
@@ -959,7 +869,7 @@ audio
 0
 ]
 .
-CAN_PLAY_THROUGH
+NETWORK_LOADED
 3
 )
 ;
@@ -970,15 +880,15 @@ document
 getElementsByTagName
 (
 "
-source
+audio
 "
 )
 [
 0
 ]
 .
-EMPTY
-undefined
+HAVE_NOTHING
+0
 )
 ;
 is
@@ -988,15 +898,15 @@ document
 getElementsByTagName
 (
 "
-source
+audio
 "
 )
 [
 0
 ]
 .
-LOADING
-undefined
+HAVE_METADATA
+1
 )
 ;
 is
@@ -1006,434 +916,465 @@ document
 getElementsByTagName
 (
 "
-source
+audio
 "
 )
 [
 0
 ]
 .
-LOADED_METADATA
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-0
-]
-.
-LOADED_FIRST_FRAME
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-0
-]
-.
-LOADED
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-0
-]
-.
-DATA_UNAVAILABLE
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-0
-]
-.
-CAN_SHOW_CURRENT_FRAME
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-0
-]
-.
-CAN_PLAY
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-0
-]
-.
-CAN_PLAY_THROUGH
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-1
-]
-.
-EMPTY
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-1
-]
-.
-LOADING
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-1
-]
-.
-LOADED_METADATA
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-1
-]
-.
-LOADED_FIRST_FRAME
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-1
-]
-.
-LOADED
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-1
-]
-.
-DATA_UNAVAILABLE
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-1
-]
-.
-CAN_SHOW_CURRENT_FRAME
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-1
-]
-.
-CAN_PLAY
-undefined
-)
-;
-is
-(
-document
-.
-getElementsByTagName
-(
-"
-source
-"
-)
-[
-1
-]
-.
-CAN_PLAY_THROUGH
-undefined
-)
-;
-is
-(
-HTMLElement
-.
-prototype
-.
-EMPTY
-undefined
-)
-;
-is
-(
-HTMLElement
-.
-prototype
-.
-LOADING
-undefined
-)
-;
-is
-(
-HTMLElement
-.
-prototype
-.
-LOADED_METADATA
-undefined
-)
-;
-is
-(
-HTMLElement
-.
-prototype
-.
-LOADED_FIRST_FRAME
-undefined
-)
-;
-is
-(
-HTMLElement
-.
-prototype
-.
-LOADED
-undefined
-)
-;
-is
-(
-HTMLElement
-.
-prototype
-.
-DATA_UNAVAILABLE
-undefined
-)
-;
-is
-(
-HTMLElement
-.
-prototype
-.
-CAN_SHOW_CURRENT_FRAME
-undefined
-)
-;
-is
-(
-HTMLElement
-.
-prototype
-.
-CAN_PLAY
-undefined
-)
-;
-is
-(
-HTMLElement
-.
-prototype
-.
-CAN_PLAY_THROUGH
-undefined
-)
-;
-is
-(
-HTMLVideoElement
-.
-prototype
-.
-EMPTY
-0
-)
-;
-is
-(
-HTMLVideoElement
-.
-prototype
-.
-LOADING
-1
-)
-;
-is
-(
-HTMLVideoElement
-.
-prototype
-.
-LOADED_METADATA
+HAVE_CURRENT_DATA
 2
 )
 ;
 is
 (
-HTMLVideoElement
+document
 .
-prototype
+getElementsByTagName
+(
+"
+audio
+"
+)
+[
+0
+]
 .
-LOADED_FIRST_FRAME
+HAVE_FUTURE_DATA
 3
 )
 ;
 is
 (
-HTMLVideoElement
+document
 .
-prototype
+getElementsByTagName
+(
+"
+audio
+"
+)
+[
+0
+]
 .
-LOADED
+HAVE_ENOUGH_DATA
 4
 )
 ;
 is
 (
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+0
+]
+.
+NETWORK_EMPTY
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+0
+]
+.
+NETWORK_IDLE
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+0
+]
+.
+NETWORK_LOADING
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+0
+]
+.
+NETWORK_LOADED
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+0
+]
+.
+HAVE_NOTHING
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+0
+]
+.
+HAVE_METADATA
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+0
+]
+.
+HAVE_CURRENT_DATA
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+0
+]
+.
+HAVE_FUTURE_DATA
+undefined
+)
+;
+is
+(
+document
+.
+getElementsByTagName
+(
+"
+source
+"
+)
+[
+0
+]
+.
+HAVE_ENOUGH_DATA
+undefined
+)
+;
+is
+(
+HTMLElement
+.
+prototype
+.
+NETWORK_EMPTY
+undefined
+)
+;
+is
+(
+HTMLElement
+.
+prototype
+.
+NETWORK_IDLE
+undefined
+)
+;
+is
+(
+HTMLElement
+.
+prototype
+.
+NETWORK_LOADING
+undefined
+)
+;
+is
+(
+HTMLElement
+.
+prototype
+.
+NETWORK_LOADED
+undefined
+)
+;
+is
+(
+HTMLElement
+.
+prototype
+.
+HAVE_NOTHING
+undefined
+)
+;
+is
+(
+HTMLElement
+.
+prototype
+.
+HAVE_METADATA
+undefined
+)
+;
+is
+(
+HTMLElement
+.
+prototype
+.
+HAVE_CURRENT_DATA
+undefined
+)
+;
+is
+(
+HTMLElement
+.
+prototype
+.
+HAVE_FUTURE_DATA
+undefined
+)
+;
+is
+(
+HTMLElement
+.
+prototype
+.
+HAVE_ENOUGH_DATA
+undefined
+)
+;
+todo_is
+(
+HTMLMediaElement
+.
+prototype
+.
+NETWORK_EMPTY
+0
+"
+HTMLMediaElement
+.
+prototype
+.
+NETWORK_EMPTY
+"
+)
+;
+todo_is
+(
+HTMLMediaElement
+.
+prototype
+.
+NETWORK_IDLE
+1
+"
+HTMLMediaElement
+.
+prototype
+.
+NETWORK_IDLE
+"
+)
+;
+todo_is
+(
+HTMLMediaElement
+.
+prototype
+.
+NETWORK_LOADING
+2
+"
+HTMLMediaElement
+.
+prototype
+.
+NETWORK_LOADING
+"
+)
+;
+todo_is
+(
+HTMLMediaElement
+.
+prototype
+.
+NETWORK_LOADED
+3
+"
+HTMLMediaElement
+.
+prototype
+.
+NETWORK_LOADED
+"
+)
+;
+todo_is
+(
+HTMLMediaElement
+.
+prototype
+.
+HAVE_NOTHING
+0
+"
+HTMLMediaElement
+.
+prototype
+.
+HAVE_NOTHING
+"
+)
+;
+todo_is
+(
+HTMLMediaElement
+.
+prototype
+.
+HAVE_METADATA
+1
+"
+HTMLMediaElement
+.
+prototype
+.
+HAVE_METADATA
+"
+)
+;
+todo_is
+(
+HTMLMediaElement
+.
+prototype
+.
+HAVE_CURRENT_DATA
+2
+"
+HTMLMediaElement
+.
+prototype
+.
+HAVE_CURRENT_DATA
+"
+)
+;
+todo_is
+(
+HTMLMediaElement
+.
+prototype
+.
+HAVE_FUTURE_DATA
+3
+"
+HTMLMediaElement
+.
+prototype
+.
+HAVE_FUTURE_DATA
+"
+)
+;
+todo_is
+(
+HTMLMediaElement
+.
+prototype
+.
+HAVE_ENOUGH_DATA
+4
+"
+HTMLMediaElement
+.
+prototype
+.
+HAVE_ENOUGH_DATA
+"
+)
+;
+is
+(
 HTMLVideoElement
 .
 prototype
 .
-DATA_UNAVAILABLE
+NETWORK_EMPTY
 0
 )
 ;
@@ -1443,7 +1384,7 @@ HTMLVideoElement
 .
 prototype
 .
-CAN_SHOW_CURRENT_FRAME
+NETWORK_IDLE
 1
 )
 ;
@@ -1453,7 +1394,7 @@ HTMLVideoElement
 .
 prototype
 .
-CAN_PLAY
+NETWORK_LOADING
 2
 )
 ;
@@ -1463,57 +1404,57 @@ HTMLVideoElement
 .
 prototype
 .
-CAN_PLAY_THROUGH
+NETWORK_LOADED
 3
 )
 ;
 is
 (
-HTMLAudioElement
+HTMLVideoElement
 .
 prototype
 .
-EMPTY
+HAVE_NOTHING
 0
 )
 ;
 is
 (
-HTMLAudioElement
+HTMLVideoElement
 .
 prototype
 .
-LOADING
+HAVE_METADATA
 1
 )
 ;
 is
 (
-HTMLAudioElement
+HTMLVideoElement
 .
 prototype
 .
-LOADED_METADATA
+HAVE_CURRENT_DATA
 2
 )
 ;
 is
 (
-HTMLAudioElement
+HTMLVideoElement
 .
 prototype
 .
-LOADED_FIRST_FRAME
+HAVE_FUTURE_DATA
 3
 )
 ;
 is
 (
-HTMLAudioElement
+HTMLVideoElement
 .
 prototype
 .
-LOADED
+HAVE_ENOUGH_DATA
 4
 )
 ;
@@ -1523,7 +1464,7 @@ HTMLAudioElement
 .
 prototype
 .
-DATA_UNAVAILABLE
+NETWORK_EMPTY
 0
 )
 ;
@@ -1533,7 +1474,7 @@ HTMLAudioElement
 .
 prototype
 .
-CAN_SHOW_CURRENT_FRAME
+NETWORK_IDLE
 1
 )
 ;
@@ -1543,7 +1484,7 @@ HTMLAudioElement
 .
 prototype
 .
-CAN_PLAY
+NETWORK_LOADING
 2
 )
 ;
@@ -1553,17 +1494,67 @@ HTMLAudioElement
 .
 prototype
 .
-CAN_PLAY_THROUGH
+NETWORK_LOADED
 3
 )
 ;
 is
 (
+HTMLAudioElement
+.
+prototype
+.
+HAVE_NOTHING
+0
+)
+;
+is
+(
+HTMLAudioElement
+.
+prototype
+.
+HAVE_METADATA
+1
+)
+;
+is
+(
+HTMLAudioElement
+.
+prototype
+.
+HAVE_CURRENT_DATA
+2
+)
+;
+is
+(
+HTMLAudioElement
+.
+prototype
+.
+HAVE_FUTURE_DATA
+3
+)
+;
+is
+(
+HTMLAudioElement
+.
+prototype
+.
+HAVE_ENOUGH_DATA
+4
+)
+;
+is
+(
 HTMLSourceElement
 .
 prototype
 .
-EMPTY
+NETWORK_EMPTY
 undefined
 )
 ;
@@ -1573,7 +1564,7 @@ HTMLSourceElement
 .
 prototype
 .
-LOADING
+NETWORK_IDLE
 undefined
 )
 ;
@@ -1583,7 +1574,7 @@ HTMLSourceElement
 .
 prototype
 .
-LOADED_METADATA
+NETWORK_LOADING
 undefined
 )
 ;
@@ -1593,7 +1584,7 @@ HTMLSourceElement
 .
 prototype
 .
-LOADED_FIRST_FRAME
+NETWORK_LOADED
 undefined
 )
 ;
@@ -1603,7 +1594,7 @@ HTMLSourceElement
 .
 prototype
 .
-LOADED
+HAVE_NOTHING
 undefined
 )
 ;
@@ -1613,7 +1604,7 @@ HTMLSourceElement
 .
 prototype
 .
-DATA_UNAVAILABLE
+HAVE_METADATA
 undefined
 )
 ;
@@ -1623,7 +1614,7 @@ HTMLSourceElement
 .
 prototype
 .
-CAN_SHOW_CURRENT_FRAME
+HAVE_CURRENT_DATA
 undefined
 )
 ;
@@ -1633,7 +1624,7 @@ HTMLSourceElement
 .
 prototype
 .
-CAN_PLAY
+HAVE_FUTURE_DATA
 undefined
 )
 ;
@@ -1643,7 +1634,7 @@ HTMLSourceElement
 .
 prototype
 .
-CAN_PLAY_THROUGH
+HAVE_ENOUGH_DATA
 undefined
 )
 ;
