--- a/content/media/video/test/test_onloadedmetadata.html
+++ b/content/media/video/test/test_onloadedmetadata.html
@@ -196,11 +196,11 @@ playbackEnded
 )
 ;
 "
-onloadedfirstframe
+onloadeddata
 =
 "
 return
-loadedFirstFrame
+loadedData
 (
 )
 ;
@@ -302,7 +302,7 @@ gSeekEnded
 false
 ;
 var
-gLoadedFirstFrameCount
+gLoadedDataCount
 =
 0
 ;
@@ -369,17 +369,17 @@ play
 ;
 }
 function
-loadedFirstFrame
+loadedData
 (
 )
 {
-gLoadedFirstFrameCount
+gLoadedDataCount
 +
 +
 ;
 ok
 (
-gLoadedFirstFrameCount
+gLoadedDataCount
 <
 =
 1
@@ -388,7 +388,7 @@ No
 more
 than
 1
-onloadedfirstframe
+onloaddata
 events
 "
 )
@@ -479,26 +479,22 @@ seekstarted
 "
 )
 ;
-ok
+is
 (
-gLoadedFirstFrameCount
-=
-=
+gLoadedDataCount
 1
 "
 Should
 have
 1
-onloadedfirstframe
+onloadeddata
 event
 "
 )
 ;
-ok
+is
 (
 gLoadedMetaDataCount
-=
-=
 1
 "
 Should
