--- a/content/media/video/test/test_seek2.html
+++ b/content/media/video/test/test_seek2.html
@@ -165,6 +165,10 @@ current
 work
 /
 #
+dom
+-
+media
+-
 seek
 /
 /
@@ -174,22 +178,21 @@ media
 element
 '
 s
-networkState
+readyState
 is
-less
-than
-LOADED_METADATA
-/
-/
+HAVE_NOTHING
 then
 the
 user
 agent
+/
+/
 must
 raise
 an
 INVALID_STATE_ERR
 exception
+.
 var
 v
 =
@@ -211,14 +214,15 @@ ok
 (
 v
 .
-networkState
-<
+readyState
+=
+=
 HTMLMediaElement
 .
-LOADED_METADATA
+HAVE_NOTHING
 "
 Invalid
-network
+ready
 state
 in
 media
