Bug 469595 - Changes to tests only: test_wav_seek* intermittent test failure - r=doublec
UltraBlame original commit: 0a945ba5d2eb0a819f6f892857ddfa8e3f777e1c

--- a/content/media/video/test/test_seek1.html
+++ b/content/media/video/test/test_seek1.html
@@ -340,6 +340,12 @@ v
 '
 )
 ;
+v
+.
+pause
+(
+)
+;
 startPassed
 =
 true
@@ -408,6 +414,12 @@ around
 "
 +
 t
+)
+;
+v
+.
+play
+(
 )
 ;
 endPassed
