--- a/content/media/video/test/test_seek6.html
+++ b/content/media/video/test/test_seek6.html
@@ -215,6 +215,11 @@ startPassed
 false
 ;
 var
+endPassed
+=
+false
+;
+var
 completed
 =
 false
@@ -308,41 +313,9 @@ completed
 return
 false
 ;
-var
-v
+endPassed
 =
-document
-.
-getElementById
-(
-'
-v
-'
-)
-;
-ok
-(
-v
-.
-currentTime
->
-=
-2
-&
-&
-v
-.
-currentTime
-<
-=
-2
-.
-2
-"
-First
-seek
-"
-)
+true
 ;
 return
 false
@@ -362,10 +335,21 @@ false
 ;
 ok
 (
-true
+startPassed
 "
-Playback
-ended
+Got
+seeking
+event
+"
+)
+;
+ok
+(
+endPassed
+"
+Got
+seeked
+event
 "
 )
 ;
