--- a/content/media/video/test/test_wav_trunc.html
+++ b/content/media/video/test/test_wav_trunc.html
@@ -151,7 +151,7 @@ wav
 src
 =
 '
-r11025_s16_c1_trunc
+r11025_u8_c1_trunc
 .
 wav
 '
@@ -233,26 +233,26 @@ v
 .
 duration
 >
-0
+1
 .
-3
+7
 &
 &
 v
 .
 duration
 <
-0
+1
 .
-5
+9
 "
 Duration
 should
 be
 around
-0
+1
 .
-4
+8
 :
 "
 +
@@ -293,9 +293,9 @@ v
 currentTime
 >
 =
-0
+1
 .
-3
+7
 &
 &
 v
@@ -303,9 +303,9 @@ v
 currentTime
 <
 =
-0
+1
 .
-5
+9
 "
 Checking
 currentTime
