--- a/content/media/video/test/test_wav_seek6.html
+++ b/content/media/video/test/test_wav_seek6.html
@@ -228,6 +228,11 @@ startPassed
 false
 ;
 var
+endPassed
+=
+false
+;
+var
 completed
 =
 false
@@ -323,43 +328,9 @@ completed
 return
 false
 ;
-var
-v
+endPassed
 =
-document
-.
-getElementById
-(
-'
-v
-'
-)
-;
-ok
-(
-v
-.
-currentTime
->
-=
-0
-.
-4
-&
-&
-v
-.
-currentTime
-<
-=
-0
-.
-6
-"
-First
-seek
-"
-)
+true
 ;
 return
 false
@@ -379,10 +350,21 @@ false
 ;
 ok
 (
-true
+startPassed
 "
-Playback
-ended
+Got
+seeking
+event
+"
+)
+;
+ok
+(
+endPassed
+"
+Got
+seeked
+event
 "
 )
 ;
