--- a/content/media/video/test/test_wav_trunc_seek.html
+++ b/content/media/video/test/test_wav_trunc_seek.html
@@ -158,7 +158,7 @@ wav
 src
 =
 '
-r11025_s16_c1_trunc
+r11025_u8_c1_trunc
 .
 wav
 '
@@ -240,26 +240,26 @@ v
 .
 duration
 >
-0
+1
 .
-3
+7
 &
 &
 v
 .
 duration
 <
-0
+1
 .
-5
+9
 "
 Duration
 should
 be
 around
-0
+1
 .
-4
+8
 :
 "
 +
@@ -272,7 +272,7 @@ v
 .
 currentTime
 =
-1
+3
 .
 0
 ;
@@ -335,9 +335,9 @@ v
 currentTime
 >
 =
-0
+1
 .
-3
+7
 &
 &
 v
@@ -345,9 +345,9 @@ v
 currentTime
 <
 =
-0
+1
 .
-5
+9
 "
 Checking
 currentTime
