--- a/accessible/tests/mochitest/test_events_caretmove.html
+++ b/accessible/tests/mochitest/test_events_caretmove.html
@@ -191,32 +191,170 @@ application
 javascript
 "
 >
+/
+*
+*
+*
+Invoker
+base
+class
+.
+*
+/
 function
-synthMouseTest
+synthAction
 (
-aNode
+aNodeOrID
+aCaretOffset
 )
 {
 this
 .
-node
+DOMNode
 =
-aNode
+getNode
+(
+aNodeOrID
+)
 ;
 this
 .
-testFunc
+check
 =
 function
-testFunc
+synthAction_check
+(
+aEvent
+)
+{
+is
+(
+aEvent
+.
+QueryInterface
+(
+nsIAccessibleCaretMoveEvent
+)
+.
+caretOffset
+this
+.
+caretOffset
+"
+Wrong
+caret
+offset
+for
+"
++
+aNodeOrID
+)
+;
+}
+this
+.
+getID
+=
+function
+synthAction_getID
 (
 )
 {
+return
+aNodeOrID
++
+"
+action
+"
+;
+}
+this
+.
+caretOffset
+=
+aCaretOffset
+;
+}
+/
+*
+*
+*
+Click
+invoker
+.
+*
+/
+function
+synthClick
+(
+aNodeOrID
+aCaretOffset
+aExtraNodeOrID
+aExtraCaretOffset
+)
+{
+this
+.
+__proto__
+=
+new
+synthAction
+(
+aNodeOrID
+aCaretOffset
+)
+;
+this
+.
+extraNode
+=
+getNode
+(
+aExtraNodeOrID
+)
+;
+this
+.
+extraCaretOffset
+=
+aExtraCaretOffset
+;
+this
+.
+invoke
+=
+function
+synthClick_invoke
+(
+)
+{
+/
+/
+Scroll
+the
+node
+into
+view
+otherwise
+synth
+click
+may
+fail
+.
+this
+.
+DOMNode
+.
+scrollIntoView
+(
+true
+)
+;
 synthesizeMouse
 (
 this
 .
-node
+DOMNode
 1
 1
 {
@@ -224,62 +362,168 @@ node
 )
 ;
 }
-}
+this
+.
+check
+=
 function
-synthKeyTest
+synthFocus_check
 (
-aNode
-aKey
+aEvent
 )
 {
 this
 .
-node
+__proto__
+.
+check
+(
+aEvent
+)
+;
+if
+(
+this
+.
+extraNode
+)
+{
+var
+acc
 =
-aNode
+getAccessible
+(
+this
+.
+extraNode
+[
+nsIAccessibleText
+]
+)
+;
+is
+(
+acc
+.
+caretOffset
+this
+.
+extraCaretOffset
+"
+Wrong
+caret
+offset
+for
+"
++
+aExtraNodeOrID
+)
+;
+}
+}
+this
+.
+getID
+=
+function
+synthFocus_getID
+(
+)
+{
+return
+aNodeOrID
++
+"
+click
+"
+;
+}
+}
+/
+*
+*
+*
+Key
+press
+invokers
+.
+*
+/
+function
+synthKey
+(
+aNodeOrID
+aCaretOffset
+aKey
+aArgs
+)
+{
+this
+.
+__proto__
+=
+new
+synthAction
+(
+aNodeOrID
+aCaretOffset
+)
 ;
 this
 .
-testFunc
+invoke
 =
 function
-testFunc
+synthKey_invoke
 (
 )
 {
 synthesizeKey
 (
-aKey
-{
-}
+this
+.
+mKey
+this
+.
+mArgs
 )
 ;
 }
+this
+.
+mKey
+=
+aKey
+;
+this
+.
+mArgs
+=
+aArgs
+?
+aArgs
+:
+{
+}
+;
 }
 function
 synthTabTest
 (
-aNode
+aNodeOrID
+aCaretOffset
 aBackTab
 )
 {
 this
 .
-node
+__proto__
 =
-aNode
-;
-this
-.
-testFunc
-=
-function
-testFunc
+new
+synthKey
 (
-)
-{
-synthesizeKey
-(
+aNodeOrID
+aCaretOffset
 "
 VK_TAB
 "
@@ -290,223 +534,303 @@ aBackTab
 }
 )
 ;
+this
+.
+getID
+=
+function
+synthTabTest_getID
+(
+)
+{
+return
+aNodeOrID
++
+"
+tab
+"
+;
 }
 }
 function
-synthFocusTest
+synthDownKey
 (
-aNode
+aNodeOrID
+aCaretOffset
 )
 {
-/
-/
-bug
-460417
 this
 .
-node
+__proto__
 =
-aNode
+new
+synthKey
+(
+aNodeOrID
+aCaretOffset
+"
+VK_DOWN
+"
+)
 ;
 this
 .
-testFunc
+getID
 =
 function
-testFunc
+synthDownKey_getID
+(
+)
+{
+return
+aNodeOrID
++
+"
+key
+down
+"
+;
+}
+}
+function
+synthRightKey
+(
+aNodeOrID
+aCaretOffset
+)
+{
+this
+.
+__proto__
+=
+new
+synthKey
+(
+aNodeOrID
+aCaretOffset
+"
+VK_RIGHT
+"
+)
+;
+this
+.
+getID
+=
+function
+synthRightKey_getID
+(
+)
+{
+return
+aNodeOrID
++
+"
+key
+right
+"
+;
+}
+}
+/
+*
+*
+*
+Focus
+invoker
+.
+*
+/
+function
+synthFocus
+(
+aNodeOrID
+aCaretOffset
+)
+{
+this
+.
+__proto__
+=
+new
+synthAction
+(
+aNodeOrID
+aCaretOffset
+)
+;
+this
+.
+invoke
+=
+function
+synthFocus_invoke
 (
 )
 {
 this
 .
-node
+DOMNode
 .
 focus
 (
 )
 ;
 }
-}
-function
-synthSelectAllTest
-(
-aNode
-)
-{
-/
-/
-bug
-460417
 this
 .
-node
+getID
 =
-aNode
+function
+synthFocus_getID
+(
+)
+{
+return
+aNodeOrID
++
+"
+focus
+"
+;
+}
+}
+/
+*
+*
+*
+Select
+all
+invoker
+.
+*
+/
+function
+synthSelectAll
+(
+aNodeOrID
+aCaretOffset
+)
+{
+this
+.
+__proto__
+=
+new
+synthAction
+(
+aNodeOrID
+aCaretOffset
+)
 ;
 this
 .
-testFunc
+invoke
 =
 function
-testFunc
+synthSelectAll_invoke
 (
 )
 {
+if
+(
 this
 .
-node
+DOMNode
+instanceof
+Components
+.
+interfaces
+.
+nsIDOMHTMLInputElement
+)
+this
+.
+DOMNode
 .
 select
 (
 )
 ;
-}
-}
-var
-gTestsArray
-=
-[
-]
-;
-var
-gTestIdx
-=
--
-1
-;
-var
-gCaretMoveHandler
-=
-{
-handleEvent
-:
-function
-handleEvent
-(
-aEvent
-)
-{
-if
-(
-aEvent
-.
-DOMNode
-=
-=
-gTestsArray
-[
-gTestIdx
-]
-.
-node
-)
-gTestsArray
-[
-gTestIdx
-]
-.
-wasCaught
-=
-true
-;
-}
-}
-;
-function
-doTest
-(
-)
-{
+else
 window
 .
-setTimeout
+getSelection
 (
+)
+.
+selectAllChildren
+(
+this
+.
+DOMNode
+)
+;
+}
+this
+.
+getID
+=
 function
+synthSelectAll_getID
 (
 )
 {
-if
-(
-gTestIdx
-=
-=
-gTestsArray
-.
-length
--
-1
-)
-{
-unregisterA11yEventListener
-(
-nsIAccessibleEvent
-.
-EVENT_TEXT_CARET_MOVED
-gCaretMoveHandler
-)
-;
-for
-(
-var
-idx
-=
-0
-;
-idx
-<
-gTestsArray
-.
-length
-;
-idx
-+
-+
-)
-ok
-(
-gTestsArray
-[
-idx
-]
-.
-wasCaught
-"
-test
-"
-+
-idx
-+
-"
-failed
-"
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
 return
+aNodeOrID
++
+"
+selectall
+"
 ;
 }
-gTestsArray
-[
-+
-+
-gTestIdx
-]
+}
+/
+*
+*
+*
+Do
+tests
 .
-testFunc
+*
+/
+var
+gQueue
+=
+null
+;
+function
+testCaretOffset
 (
+aAccOrElmOrID
+aCaretOffset
+)
+{
+var
+acc
+=
+getAccessible
+(
+aAccOrElmOrID
+[
+nsIAccessibleText
+]
 )
 ;
-doTest
+is
 (
-)
-;
-}
-100
+acc
+.
+caretOffset
+aCaretOffset
+"
+Wrong
+caret
+offset
+for
+"
++
+aAccOrElmOrID
 )
 ;
 }
@@ -515,199 +839,274 @@ doTests
 (
 )
 {
-var
+/
+/
+test
+no
+focused
+accessibles
+testCaretOffset
+(
+"
 textbox
+"
+-
+1
+)
+;
+testCaretOffset
+(
+"
+textarea
+"
+-
+1
+)
+;
+testCaretOffset
+(
+"
+p
+"
+-
+1
+)
+;
+/
+/
+test
+caret
+move
+events
+and
+caret
+offsets
+gQueue
 =
-document
-.
-getElementById
-(
-"
-textbox
-"
-)
-;
-gTestsArray
-.
-push
-(
 new
-synthFocusTest
-(
-textbox
-)
-)
-;
-gTestsArray
-.
-push
-(
-new
-synthSelectAllTest
-(
-textbox
-)
-)
-;
-gTestsArray
-.
-push
-(
-new
-synthMouseTest
-(
-textbox
-)
-)
-;
-gTestsArray
-.
-push
-(
-new
-synthKeyTest
-(
-textbox
-"
-VK_RIGHT
-"
-)
-)
-;
-var
-textarea
-=
-document
-.
-getElementById
-(
-"
-textarea
-"
-)
-;
-gTestsArray
-.
-push
-(
-new
-synthMouseTest
-(
-textarea
-)
-)
-;
-gTestsArray
-.
-push
-(
-new
-synthKeyTest
-(
-textarea
-"
-VK_RIGHT
-"
-)
-)
-;
-gTestsArray
-.
-push
-(
-new
-synthKeyTest
-(
-textarea
-"
-VK_DOWN
-"
-)
-)
-;
-var
-p
-=
-document
-.
-getElementById
-(
-"
-p
-"
-)
-;
-gTestsArray
-.
-push
-(
-new
-synthMouseTest
-(
-p
-)
-)
-;
-gTestsArray
-.
-push
-(
-new
-synthKeyTest
-(
-p
-"
-VK_RIGHT
-"
-)
-)
-;
-gTestsArray
-.
-push
-(
-new
-synthKeyTest
-(
-p
-"
-VK_DOWN
-"
-)
-)
-;
-gTestsArray
-.
-push
-(
-new
-synthTabTest
-(
-textarea
-true
-)
-)
-;
-gTestsArray
-.
-push
-(
-new
-synthTabTest
-(
-p
-)
-)
-;
-registerA11yEventListener
+eventQueue
 (
 nsIAccessibleEvent
 .
 EVENT_TEXT_CARET_MOVED
-gCaretMoveHandler
 )
 ;
-doTest
+var
+id
+=
+"
+textbox
+"
+;
+gQueue
+.
+push
+(
+new
+synthFocus
+(
+id
+5
+)
+)
+;
+gQueue
+.
+push
+(
+new
+synthSelectAll
+(
+id
+5
+)
+)
+;
+gQueue
+.
+push
+(
+new
+synthClick
+(
+id
+0
+)
+)
+;
+gQueue
+.
+push
+(
+new
+synthRightKey
+(
+id
+1
+)
+)
+;
+id
+=
+"
+textarea
+"
+;
+gQueue
+.
+push
+(
+new
+synthClick
+(
+id
+0
+)
+)
+;
+gQueue
+.
+push
+(
+new
+synthRightKey
+(
+id
+1
+)
+)
+;
+gQueue
+.
+push
+(
+new
+synthDownKey
+(
+id
+12
+)
+)
+;
+id
+=
+"
+p
+"
+;
+gQueue
+.
+push
+(
+new
+synthClick
+(
+id
+0
+)
+)
+;
+gQueue
+.
+push
+(
+new
+synthRightKey
+(
+id
+1
+)
+)
+;
+gQueue
+.
+push
+(
+new
+synthDownKey
+(
+id
+6
+)
+)
+;
+gQueue
+.
+push
+(
+new
+synthClick
+(
+"
+p1_in_div
+"
+0
+"
+p2_in_div
+"
+-
+1
+)
+)
+;
+gQueue
+.
+push
+(
+new
+synthTabTest
+(
+"
+p
+"
+0
+true
+)
+)
+;
+gQueue
+.
+push
+(
+new
+synthTabTest
+(
+"
+textarea
+"
+12
+true
+)
+)
+;
+gQueue
+.
+push
+(
+new
+synthTabTest
+(
+"
+p
+"
+0
+false
+)
+)
+;
+gQueue
+.
+invoke
+(
+)
+;
+/
+/
+Will
+call
+SimpleTest
+.
+finish
 (
 )
 ;
@@ -882,6 +1281,49 @@ text
 <
 /
 p
+>
+<
+div
+id
+=
+"
+div
+"
+contentEditable
+=
+"
+true
+"
+>
+<
+p
+id
+=
+"
+p1_in_div
+"
+>
+text
+<
+/
+p
+>
+<
+p
+id
+=
+"
+p2_in_div
+"
+>
+text
+<
+/
+p
+>
+<
+/
+div
 >
 <
 /
