Bug 466629 - AttributeChangedEvent not fired, or at least test is failing, with spell check mistakes on Linux, r=marcoz
UltraBlame original commit: 9668585ab6a1a5b9c69006f3fe05b09e0ed7d6cf

--- a/accessible/tests/mochitest/test_textattrs.html
+++ b/accessible/tests/mochitest/test_textattrs.html
@@ -204,121 +204,40 @@ gComputedStyle
 null
 ;
 var
-gObserverService
+gTextAttrChangedEventHandler
 =
-null
+{
+handleEvent
+:
+function
+gTextAttrChangedEventHandler_handleEvent
+(
+aEvent
+)
+{
+this
+.
+eventNumber
++
++
 ;
-var
-gA11yEventObserver
-=
-null
+}
+eventNumber
+:
+0
+}
 ;
 function
 testSpellTextAttrs
 (
 )
 {
-gA11yEventObserver
-=
-{
-observe
-:
-function
-observe
+registerA11yEventListener
 (
-aSubject
-aTopic
-aData
-)
-{
-if
-(
-aTopic
-!
-=
-"
-accessible
--
-event
-"
-)
-return
-;
-var
-event
-=
-aSubject
-.
-QueryInterface
-(
-nsIAccessibleEvent
-)
-;
-if
-(
-event
-.
-eventType
-=
-=
 nsIAccessibleEvent
 .
 EVENT_TEXT_ATTRIBUTE_CHANGED
-)
-this
-.
-mTextAttrChangedEventCounter
-+
-+
-;
-}
-mTextAttrChangedEventCounter
-:
-0
-}
-;
-/
-/
-Add
-accessibility
-event
-listeners
-var
-gObserverService
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-observer
--
-service
-;
-1
-"
-]
-.
-getService
-(
-nsIObserverService
-)
-;
-gObserverService
-.
-addObserver
-(
-gA11yEventObserver
-"
-accessible
--
-event
-"
-false
+gTextAttrChangedEventHandler
 )
 ;
 ID
@@ -335,6 +254,21 @@ document
 getElementById
 (
 ID
+)
+;
+node
+.
+setAttribute
+(
+"
+value
+"
+"
+valid
+text
+inalid
+tixt
+"
 )
 ;
 node
@@ -520,22 +454,11 @@ misspelledAttrs
 22
 )
 ;
-if
-(
-navigator
-.
-platform
-=
-=
-"
-Win32
-"
-)
 is
 (
-gA11yEventObserver
+gTextAttrChangedEventHandler
 .
-mTextAttrChangedEventCounter
+eventNumber
 2
 "
 Wrong
@@ -553,45 +476,12 @@ for
 ID
 )
 ;
-else
-todo
+unregisterA11yEventListener
 (
-gA11yEventObserver
+nsIAccessibleEvent
 .
-mTextAttrChangedEventCounter
-2
-"
-Wrong
-count
-of
-'
-text
-attribute
-changed
-'
-events
-for
-"
-+
-ID
-)
-;
-/
-/
-Remove
-a11y
-events
-listener
-gObserverService
-.
-removeObserver
-(
-gA11yEventObserver
-"
-accessible
--
-event
-"
+EVENT_TEXT_ATTRIBUTE_CHANGED
+gTextAttrChangedEventHandler
 )
 ;
 SimpleTest
@@ -3212,7 +3102,7 @@ waitForExplicitFinish
 (
 )
 ;
-addLoadEvent
+addA11yLoadEvent
 (
 doTest
 )
@@ -3762,14 +3652,6 @@ id
 =
 "
 area8
-"
-value
-=
-"
-valid
-text
-inalid
-tixt
 "
 /
 >
