Bug 469720 -  tabindex of -1 set in javascript ignored on file input, r+sr=bz
UltraBlame original commit: bf6a20408db612e9d248b28f90cab1f8521cc4c5

--- a/content/events/test/test_bug238987.html
+++ b/content/events/test/test_bug238987.html
@@ -1093,13 +1093,11 @@ Did
 focus
 handling
 succeed
-ok
+is
 (
 forwardFocusArray
 .
 length
-=
-=
 0
 "
 Not
@@ -1119,13 +1117,11 @@ toString
 )
 )
 ;
-ok
+is
 (
 backwardFocusArray
 .
 length
-=
-=
 0
 "
 Not
@@ -1145,11 +1141,9 @@ toString
 )
 )
 ;
-ok
+is
 (
 expectedWindowFocusCount
-=
-=
 0
 "
 |
@@ -1173,13 +1167,11 @@ events
 and
 blur
 .
-ok
+is
 (
 forwardBlurArray
 .
 length
-=
-=
 0
 "
 Not
@@ -1199,13 +1191,11 @@ toString
 )
 )
 ;
-ok
+is
 (
 backwardBlurArray
 .
 length
-=
-=
 0
 "
 Not
@@ -1225,11 +1215,9 @@ toString
 )
 )
 ;
-ok
+is
 (
 expectedWindowBlurCount
-=
-=
 0
 "
 |
@@ -1396,6 +1384,43 @@ blur
 "
 handleBlur
 false
+)
+;
+}
+if
+(
+elements
+[
+i
+]
+.
+getAttribute
+(
+"
+tabindex
+"
+)
+=
+=
+"
+1
+"
+)
+{
+elements
+[
+i
+]
+.
+setAttribute
+(
+"
+tabindex
+"
+"
+-
+1
+"
 )
 ;
 }
@@ -1954,6 +1979,904 @@ span
 <
 /
 span
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+<
+h3
+>
+Form
+elements
+with
+tabindex
+=
+"
+-
+1
+"
+<
+/
+h3
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+text
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+text
+"
+tabindex
+=
+"
+-
+1
+"
+value
+=
+"
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+button
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+button
+"
+tabindex
+=
+"
+-
+1
+"
+value
+=
+"
+type
+=
+'
+button
+'
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+checkbox
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+checkbox
+"
+tabindex
+=
+"
+-
+1
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+radio
+"
+checked
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+radio
+"
+tabindex
+=
+"
+-
+1
+"
+name
+=
+"
+radio3
+"
+checked
+>
+<
+input
+type
+=
+"
+radio
+"
+tabindex
+=
+"
+-
+1
+"
+name
+=
+"
+radio3
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+radio
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+radio
+"
+tabindex
+=
+"
+-
+1
+"
+name
+=
+"
+radio4
+"
+>
+<
+input
+type
+=
+"
+radio
+"
+tabindex
+=
+"
+-
+1
+"
+name
+=
+"
+radio4
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+password
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+password
+"
+tabindex
+=
+"
+-
+1
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+file
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+file
+"
+tabindex
+=
+"
+-
+1
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+button
+<
+/
+td
+>
+<
+td
+>
+<
+button
+tabindex
+=
+"
+-
+1
+"
+>
+button
+<
+/
+button
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+select
+<
+/
+td
+>
+<
+td
+>
+<
+select
+tabindex
+=
+"
+-
+1
+"
+>
+<
+option
+>
+select
+<
+/
+option
+>
+<
+/
+select
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+<
+h3
+>
+Form
+elements
+with
+.
+setAttribute
+(
+"
+tabindex
+"
+"
+-
+1
+"
+)
+<
+/
+h3
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+text
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+text
+"
+tabindex
+=
+"
+1
+"
+value
+=
+"
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+button
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+button
+"
+tabindex
+=
+"
+1
+"
+value
+=
+"
+type
+=
+'
+button
+'
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+checkbox
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+checkbox
+"
+tabindex
+=
+"
+1
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+radio
+"
+checked
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+radio
+"
+tabindex
+=
+"
+1
+"
+name
+=
+"
+radio5
+"
+checked
+>
+<
+input
+type
+=
+"
+radio
+"
+tabindex
+=
+"
+1
+"
+name
+=
+"
+radio5
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+radio
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+radio
+"
+tabindex
+=
+"
+1
+"
+name
+=
+"
+radio6
+"
+>
+<
+input
+type
+=
+"
+radio
+"
+tabindex
+=
+"
+1
+"
+name
+=
+"
+radio6
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+password
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+password
+"
+tabindex
+=
+"
+1
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+type
+=
+"
+file
+"
+<
+/
+td
+>
+<
+td
+>
+<
+input
+type
+=
+"
+file
+"
+tabindex
+=
+"
+1
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+button
+<
+/
+td
+>
+<
+td
+>
+<
+button
+tabindex
+=
+"
+1
+"
+>
+button
+<
+/
+button
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+td
+>
+select
+<
+/
+td
+>
+<
+td
+>
+<
+select
+tabindex
+=
+"
+1
+"
+>
+<
+option
+>
+select
+<
+/
+option
+>
+<
+/
+select
 >
 <
 /
