--- a/content/media/video/test/test_media_selection.html
+++ b/content/media/video/test/test_media_selection.html
@@ -709,7 +709,7 @@ set_src
 '
 320x240
 .
-ogg
+ogv
 '
 null
 check_ogg
@@ -721,7 +721,7 @@ add_source
 '
 320x240
 .
-ogg
+ogv
 '
 null
 check_ogg
@@ -733,7 +733,7 @@ add_source
 '
 320x240
 .
-ogg
+ogv
 '
 '
 application
@@ -749,7 +749,7 @@ add_sources_last
 '
 320x240
 .
-ogg
+ogv
 '
 null
 check_ogg
@@ -761,7 +761,7 @@ add_sources_first
 '
 320x240
 .
-ogg
+ogv
 '
 '
 application
@@ -861,7 +861,7 @@ add_source
 '
 320x240
 .
-ogg
+ogv
 '
 '
 audio
@@ -908,7 +908,7 @@ add_source
 '
 320x240
 .
-ogg
+ogv
 '
 '
 bogus
@@ -1023,7 +1023,7 @@ late_add_sources_last
 '
 320x240
 .
-ogg
+ogv
 '
 null
 0
@@ -1042,7 +1042,7 @@ late_add_sources_first
 '
 320x240
 .
-ogg
+ogv
 '
 '
 application
