--- a/content/media/video/test/test_videoDocumentTitle.html
+++ b/content/media/video/test/test_videoDocumentTitle.html
@@ -26,7 +26,7 @@ cgi
 ?
 id
 =
-448534
+463830
 -
 -
 >
@@ -39,7 +39,7 @@ title
 Test
 for
 Bug
-448534
+463830
 <
 /
 title
@@ -49,7 +49,7 @@ script
 type
 =
 "
-text
+application
 /
 javascript
 "
@@ -73,7 +73,7 @@ script
 type
 =
 "
-text
+application
 /
 javascript
 "
@@ -155,89 +155,46 @@ cgi
 ?
 id
 =
-448535
+463830
 "
 >
 Mozilla
 Bug
-448534
+463830
 <
 /
 a
 >
 <
-!
--
--
-Ogg
-video
-obtained
-from
-Theora
-test
-suite
-:
-http
-:
-/
-/
-v2v
-.
-cc
-/
-~
-j
-/
-theora_testsuite
-/
--
--
->
-<
-video
+p
 id
 =
-'
-v
-'
-src
-=
-'
-320x240
-.
-ogv
-'
-onloadedmetadata
-=
-'
-return
-loaded
-(
-)
-;
-'
-onplay
-=
-'
-return
-started
-(
-)
-;
-'
-onpause
-=
-'
-return
-stopped
-(
-)
-;
-'
+"
+display
+"
 >
 <
 /
-video
+p
+>
+<
+div
+id
+=
+"
+content
+"
+style
+=
+"
+display
+:
+none
+"
+>
+<
+/
+div
 >
 <
 pre
@@ -249,143 +206,95 @@ test
 >
 <
 script
-class
-=
-"
-testbody
-"
 type
 =
 "
-text
+application
 /
 javascript
 "
 >
+/
+*
+*
+Test
+for
+Bug
+463830
+*
+*
+/
 var
-v
+gTests
 =
-document
-.
-getElementById
-(
-'
-v
-'
-)
-;
-var
-played
-=
-false
-;
-var
-completed
-=
-false
-;
-function
-loaded
-(
-)
+[
 {
-if
-(
-completed
-)
-return
-false
-;
-v
-.
-play
-(
-)
-;
-return
-false
-;
-}
-function
-started
-(
-)
-{
-if
-(
-completed
-)
-return
-false
-;
-ok
-(
-!
-v
-.
-paused
+file
+:
 "
+320x240
+.
+ogv
+"
+title
+:
+"
+320x240
+.
+ogv
+(
+Ogg
 Video
-should
-not
-be
-paused
-while
-playing
+)
 "
-)
-;
-v
-.
-parentNode
-.
-removeChild
-(
-v
-)
-;
-played
-=
-true
-;
-return
-false
-;
 }
+{
+file
+:
+"
+bug461281
+.
+ogg
+"
+title
+:
+"
+bug461281
+.
+ogg
+(
+Ogg
+Video
+)
+"
+}
+]
+;
+var
+gTestNum
+=
+0
+;
+addLoadEvent
+(
+runTest
+)
+;
 function
-stopped
+runTest
 (
 )
 {
 if
 (
-completed
-)
-return
-false
-;
-completed
+gTestNum
 =
-true
-;
-ok
-(
-v
+=
+gTests
 .
-paused
-"
-Video
-should
-be
-paused
-after
-removing
-from
-the
-Document
-"
+length
 )
-;
+{
 SimpleTest
 .
 finish
@@ -393,7 +302,89 @@ finish
 )
 ;
 return
-false
+;
+}
+var
+file
+=
+gTests
+[
+gTestNum
+]
+.
+file
+;
+var
+title
+=
+gTests
+[
+gTestNum
+]
+.
+title
+;
+var
+w
+=
+window
+.
+open
+(
+file
+"
+"
+"
+width
+=
+500
+height
+=
+300
+"
+)
+;
+w
+.
+onload
+=
+function
+(
+)
+{
+is
+(
+w
+.
+document
+.
+title
+title
+"
+Video
+doc
+title
+incorrect
+"
+)
+;
+w
+.
+close
+(
+)
+;
+setTimeout
+(
+runTest
+0
+)
+;
+}
+;
+gTestNum
++
++
 ;
 }
 SimpleTest
