Bug 458613, set relatedTarget for dragenter and dragleave events, r=smaug,sr=roc
UltraBlame original commit: 94c0ba6674c0290da4f70676b8ac628be4398fec

--- a/content/events/test/test_dragstart.html
+++ b/content/events/test/test_dragstart.html
@@ -538,6 +538,16 @@ true
 true
 window
 1
+40
+35
+20
+15
+false
+true
+false
+false
+0
+null
 null
 )
 ;
@@ -586,6 +596,18 @@ true
 true
 window
 0
+40
+35
+20
+15
+true
+false
+true
+true
+2
+document
+.
+documentElement
 null
 )
 ;
@@ -5350,8 +5372,6 @@ type
 "
 )
 ;
-return
-;
 var
 dt
 =
@@ -5359,6 +5379,8 @@ event
 .
 dataTransfer
 ;
+/
+/
 ok
 (
 dt
@@ -5373,6 +5395,8 @@ DataTransfer
 "
 )
 ;
+/
+/
 checkTypes
 (
 dt
@@ -5395,6 +5419,136 @@ detail
 synthetic
 dragstart
 detail
+"
+)
+;
+is
+(
+event
+.
+screenX
+40
+"
+synthetic
+dragstart
+screenX
+"
+)
+;
+is
+(
+event
+.
+screenY
+35
+"
+synthetic
+dragstart
+screenY
+"
+)
+;
+is
+(
+event
+.
+clientX
+20
+"
+synthetic
+dragstart
+clientX
+"
+)
+;
+is
+(
+event
+.
+clientY
+15
+"
+synthetic
+dragstart
+clientY
+"
+)
+;
+is
+(
+event
+.
+ctrlKey
+false
+"
+synthetic
+dragstart
+ctrlKey
+"
+)
+;
+is
+(
+event
+.
+altKey
+true
+"
+synthetic
+dragstart
+altKey
+"
+)
+;
+is
+(
+event
+.
+shiftKey
+false
+"
+synthetic
+dragstart
+shiftKey
+"
+)
+;
+is
+(
+event
+.
+metaKey
+false
+"
+synthetic
+dragstart
+metaKey
+"
+)
+;
+is
+(
+event
+.
+button
+0
+"
+synthetic
+dragstart
+button
+"
+)
+;
+is
+(
+event
+.
+relatedTarget
+null
+"
+synthetic
+dragstart
+relatedTarget
 "
 )
 ;
@@ -5461,8 +5615,6 @@ type
 "
 )
 ;
-return
-;
 var
 dt
 =
@@ -5470,6 +5622,8 @@ event
 .
 dataTransfer
 ;
+/
+/
 ok
 (
 dt
@@ -5484,6 +5638,8 @@ DataTransfer
 "
 )
 ;
+/
+/
 checkTypes
 (
 dt
@@ -5493,6 +5649,151 @@ dt
 "
 synthetic
 dragover
+"
+)
+;
+is
+(
+event
+.
+detail
+0
+"
+synthetic
+dragover
+detail
+"
+)
+;
+is
+(
+event
+.
+screenX
+40
+"
+synthetic
+dragover
+screenX
+"
+)
+;
+is
+(
+event
+.
+screenY
+35
+"
+synthetic
+dragover
+screenY
+"
+)
+;
+is
+(
+event
+.
+clientX
+20
+"
+synthetic
+dragover
+clientX
+"
+)
+;
+is
+(
+event
+.
+clientY
+15
+"
+synthetic
+dragover
+clientY
+"
+)
+;
+is
+(
+event
+.
+ctrlKey
+true
+"
+synthetic
+dragover
+ctrlKey
+"
+)
+;
+is
+(
+event
+.
+altKey
+false
+"
+synthetic
+dragover
+altKey
+"
+)
+;
+is
+(
+event
+.
+shiftKey
+true
+"
+synthetic
+dragover
+shiftKey
+"
+)
+;
+is
+(
+event
+.
+metaKey
+true
+"
+synthetic
+dragover
+metaKey
+"
+)
+;
+is
+(
+event
+.
+button
+2
+"
+synthetic
+dragover
+button
+"
+)
+;
+is
+(
+event
+.
+relatedTarget
+document
+.
+documentElement
+"
+synthetic
+dragover
+relatedTarget
 "
 )
 ;
