Bug 461680 - Improve video control fade in/out animation. r=enn
UltraBlame original commit: 09cfc25615d337a2cecc61ccb6ec2b79735a0413

--- a/toolkit/content/tests/widgets/test_videocontrols.html
+++ b/toolkit/content/tests/widgets/test_videocontrols.html
@@ -175,6 +175,7 @@ video
 ogg
 "
 controls
+mozNoDynamicControls
 >
 <
 /
@@ -207,23 +208,6 @@ text
 javascript
 "
 >
-var
-testnum
-=
-1
-;
-var
-video
-=
-document
-.
-getElementById
-(
-"
-video
-"
-)
-;
 function
 runTest
 (
@@ -275,7 +259,7 @@ event
 .
 type
 "
-load
+loadeddata
 "
 "
 checking
@@ -314,59 +298,6 @@ state
 ;
 /
 /
-Let
-the
-fadein
-happen
-synthesizeMouse
-(
-video
-12
-228
-{
-type
-:
-"
-mouseover
-"
-}
-)
-;
-setTimeout
-(
-runTest
-0
-{
-type
-:
-"
-setTimeout
-"
-}
-)
-;
-break
-;
-case
-2
-:
-is
-(
-event
-.
-type
-"
-setTimeout
-"
-"
-checking
-event
-type
-"
-)
-;
-/
-/
 Click
 the
 play
@@ -383,7 +314,7 @@ video
 break
 ;
 case
-3
+2
 :
 is
 (
@@ -446,7 +377,7 @@ video
 break
 ;
 case
-4
+3
 :
 is
 (
@@ -530,7 +461,7 @@ video
 break
 ;
 case
-5
+4
 :
 is
 (
@@ -614,7 +545,7 @@ video
 break
 ;
 case
-6
+5
 :
 is
 (
@@ -686,7 +617,7 @@ event
 +
 event
 .
-name
+type
 ;
 }
 testnum
@@ -694,12 +625,58 @@ testnum
 +
 ;
 }
-window
-.
-onload
+var
+testnum
 =
-runTest
+1
 ;
+var
+video
+=
+document
+.
+getElementById
+(
+"
+video
+"
+)
+;
+/
+/
+Kick
+off
+test
+once
+we
+'
+ve
+got
+enough
+to
+do
+something
+.
+video
+.
+addEventListener
+(
+"
+loadeddata
+"
+runTest
+false
+)
+;
+/
+/
+Other
+events
+expected
+by
+the
+test
+.
 video
 .
 addEventListener
