--- a/content/events/test/test_bug409604.html
+++ b/content/events/test/test_bug409604.html
@@ -263,6 +263,7 @@ h
 k
 l
 m
+n
 "
 ;
 /
@@ -1295,20 +1296,24 @@ shift
 "
 k
 "
-is
+and
+"
+n
+"
+are
 a
 special
-case
+cases
 because
 the
 element
 receiving
 the
 focus
+/
+/
 is
 not
-/
-/
 the
 element
 which
@@ -1323,6 +1328,14 @@ expected
 =
 "
 k
+"
+|
+|
+expected
+=
+=
+"
+n
 "
 )
 {
@@ -3492,7 +3505,7 @@ label
 onfocus
 =
 "
-handleInvalid
+handleFocus
 (
 event
 .
