Bug 471404 - "Remove All Reports" shouldn't be available if there aren't any reports. r=ted
UltraBlame original commit: 77084056e89a9213a2567c125d94abd06d90638d

--- a/toolkit/crashreporter/content/crashes.xhtml
+++ b/toolkit/crashreporter/content/crashes.xhtml
@@ -177,6 +177,22 @@ space
 nowrap
 ;
 }
+th
+[
+chromedir
+=
+"
+rtl
+"
+]
+{
+text
+-
+align
+:
+right
+;
+}
 /
 *
 name
@@ -265,7 +281,7 @@ space
 nowrap
 ;
 }
-.
+#
 clear
 -
 reports
@@ -275,23 +291,7 @@ float
 right
 ;
 }
-th
-[
-chromedir
-=
-"
-rtl
-"
-]
-{
-text
--
-align
-:
-right
-;
-}
-.
+#
 clear
 -
 reports
@@ -595,6 +595,25 @@ document
 getElementById
 (
 "
+clear
+-
+reports
+"
+)
+.
+style
+.
+display
+=
+"
+none
+"
+;
+document
+.
+getElementById
+(
+"
 reportList
 "
 )
@@ -750,7 +769,7 @@ if
 (
 leaf
 .
-substring
+substr
 (
 0
 3
@@ -765,11 +784,8 @@ bp
 &
 leaf
 .
-substring
+substr
 (
-leaf
-.
-length
 -
 4
 )
@@ -838,6 +854,25 @@ length
 0
 )
 {
+document
+.
+getElementById
+(
+"
+clear
+-
+reports
+"
+)
+.
+style
+.
+display
+=
+"
+none
+"
+;
 document
 .
 getElementById
@@ -1315,7 +1350,7 @@ if
 (
 leaf
 .
-substring
+substr
 (
 0
 3
@@ -1330,11 +1365,8 @@ bp
 &
 leaf
 .
-substring
+substr
 (
-leaf
-.
-length
 -
 4
 )
@@ -1355,6 +1387,25 @@ false
 ;
 }
 }
+document
+.
+getElementById
+(
+"
+clear
+-
+reports
+"
+)
+.
+style
+.
+display
+=
+"
+none
+"
+;
 document
 .
 getElementById
@@ -1443,7 +1494,7 @@ locale
 dir
 ;
 "
-class
+id
 =
 "
 clear
