Backed out changeset 1c68eb288c85 for mochitest timeouts.
UltraBlame original commit: a5227b4f2814c6e40d99587819ba502a548207c4

--- a/dom/src/threads/test/test_errorPropagation.html
+++ b/dom/src/threads/test/test_errorPropagation.html
@@ -276,10 +276,8 @@ target
 worker
 )
 ;
-isnot
+ok
 (
--
-1
 event
 .
 data
@@ -291,6 +289,15 @@ errors
 errorIndex
 ]
 )
+!
+=
+-
+1
+"
+Wrong
+message
+!
+"
 )
 ;
 ok
@@ -365,13 +372,11 @@ target
 worker
 )
 ;
-isnot
+ok
 (
--
-1
 event
 .
-message
+data
 .
 indexOf
 (
@@ -380,6 +385,15 @@ errors
 errorIndex
 ]
 )
+!
+=
+-
+1
+"
+Wrong
+message
+!
+"
 )
 ;
 switch
@@ -494,35 +508,28 @@ finish
 return
 ;
 }
-is
+ok
 (
 message
 .
 message
-'
+.
+indexOf
+(
+errors
 [
-JavaScript
-Error
-:
-"
-uncaught
-exception
-:
-This
-exception
-should
-show
-'
-+
-'
-up
-in
-the
-JS
-console
-"
+errorIndex
 ]
-'
+)
+!
+=
+-
+1
+"
+Wrong
+message
+!
+"
 )
 ;
 worker
