--- a/dom/src/threads/test/test_simpleThread.html
+++ b/dom/src/threads/test/test_simpleThread.html
@@ -377,7 +377,12 @@ is
 (
 event
 .
-message
+data
+'
+[
+JavaScript
+Error
+:
 "
 uncaught
 exception
@@ -387,6 +392,8 @@ message
 :
 asdf
 "
+]
+'
 )
 ;
 worker
@@ -410,13 +417,56 @@ is
 (
 otherEvent
 .
-message
+data
+'
+[
+JavaScript
+Error
+:
 "
 Components
 is
 not
 defined
 "
+{
+file
+:
+'
++
+'
+"
+http
+:
+/
+/
+localhost
+:
+8888
+/
+tests
+/
+dom
+/
+src
+/
+threads
+/
+test
+/
+'
++
+'
+simpleThread_worker
+.
+js
+"
+line
+:
+6
+}
+]
+'
 )
 ;
 gotErrors
@@ -445,7 +495,7 @@ error
 +
 oneMoreEvent
 .
-message
+data
 )
 ;
 SimpleTest
