--- a/dom/src/threads/test/test_recursion.html
+++ b/dom/src/threads/test/test_recursion.html
@@ -199,12 +199,52 @@ is
 (
 event
 .
-message
+data
+'
+[
+JavaScript
+Error
+:
 "
 too
 much
 recursion
 "
+{
+file
+:
+"
+http
+:
+/
+/
+localhost
+:
+8888
+'
++
+'
+/
+tests
+/
+dom
+/
+src
+/
+threads
+/
+test
+/
+recursion_worker
+.
+js
+"
+line
+:
+2
+}
+]
+'
 )
 ;
 SimpleTest
